# open-ai-text-to-speech

./: .dockerignore  .env.example  .gitignore  Dockerfile  FUNDING.yml  LICENSE  README.md  app.py  ci_test.sh  cookies.txt  docker-compose.yml  docker_test_pdf.py  docker_test_pdf_preview.py  docker_test_preview.py  generator.py  jest.config.js  manual-test-plan.md  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  run_client_tests.sh  run_docker_tests.py  run_tests.py  setup.py  test.txt  test_flask.py  test_pdf.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
client-tests/: browser.test.js  jest.config.js  main.test.js  pdf-preview.test.js  pdf-support.test.js  preview-toggle.test.js  reactive-preview.test.js  setupTests.js  ui-behavior.test.js  voice-samples.test.js
docs/: README.md  test_improvements.md
docs/bug_fixes/: client_test_fixes.md  text_display_fix.md
docs/instructions/: README.md  advanced_test_scenarios.md  bug_prevention.md  client_side_testing.md  contribution_guide.md  docker_testing.md  pdf_support.md  project_overview.md  server_side_testing.md  testing_guide.md
static/: audio-test.html
static/js/: main.js
templates/: base.html  history.html  index.html  result.html
tests/: test_advanced.py  test_docker_flask.py  test_docker_generation.py  test_docker_web.py  test_generator.py  test_pdf_preview.py  test_pdf_support.py  test_result_page.py  test_text_display.py  test_voice_samples.py
